2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-01-30  Tom Hacohen (TAsn)

        * Added "UNDER" cursor mode.
        * Added auto-alignment to text parts, just set text.alignment to -1 to
          activate it. It's only relevant to TEXT parts, textblock objects
          already have that by default.

2011-02-01  Tom Hacohen (TAsn)

        * Added Mirroring support to edje objects.

2011-02-08  Cedric BAIL

	* Fix invalid memory access by edje alias code.

2011-02-10  Cedric BAIL

	* Fix use of recursive alias.

2011-02-21  WooHyun Jung

        * Fix missing cursor changed signale on backspace

2011-02-21  Mike Blumenkrantz

        * Add built-in cpp (epp) to provide consistent output on all archs/OSes

2011-02-10  Cedric BAIL

	* Fix propagation of recursive events on existing part.

2011-02-24  Cedric BAIL

	* fix signal comming from box/table item to include their
	index or name correctly.