@@ -37,3 +37,7 @@
 
 	* fix signal comming from box/table item to include their
 	index or name correctly.
+
+2011-02-25  Jihoon Kim
+
+	* Add edje_object_part_text_cursor_pos_{set,get} API
